# program-v2

./: .env.example  .gitignore  .prettierignore  Anchor.toml  Architecture.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  Makefile  README.md  Report.md  SECURITY.md  deploy.sh  implementaion_plan.md  issues.md  package-lock.json  package.json  patch_tests.js  rustfmt.toml  start-validator.sh  test_rpc.sh  tsconfig.json  txtx.yml
assertions/: Cargo.toml
assertions/src/: lib.rs
contracts/policies/whitelist/: Cargo.toml
contracts/policies/whitelist/src/: lib.rs
contracts/program/: Cargo.toml
contracts/program/src/: error.rs  instruction.rs  lib.rs  processor.rs
contracts/program/src/actions/: add_authority.rs  create_session.rs  create_wallet.rs  execute.rs  mod.rs  register_policy.rs  remove_authority.rs  transfer_ownership.rs  update_authority.rs
contracts/program/tests/: security_tests.rs
contracts/state/: Cargo.toml
contracts/state/src/: builder.rs  error.rs  lib.rs  policy.rs
contracts/state/src/authority/: accounts_payload.rs  ed25519.rs  mod.rs  secp256r1.rs
interface/: Cargo.toml
interface/src/: lib.rs
lazorkit-v2/: Cargo.toml
lazorkit-v2/assertions/: Cargo.toml
lazorkit-v2/assertions/src/: lib.rs
lazorkit-v2/instructions/: Cargo.toml
lazorkit-v2/instructions/src/: lib.rs
lazorkit-v2/interface/: Cargo.toml
lazorkit-v2/interface/src/: lib.rs
lazorkit-v2/no-padding/src/: lib.rs
lazorkit-v2/program/: Cargo.toml
lazorkit-v2/program/src/: error.rs  instruction.rs  lib.rs
lazorkit-v2/program/src/actions/: add_authority.rs  add_plugin.rs  create_session.rs  (+7 more)
lazorkit-v2/program/tests/: add_authority_test.rs  add_plugin_test.rs  all_permission_plugin_test.rs  create_session_test.rs  create_wallet_test.rs  execute_test.rs  plugin_integration_test.rs  program_whitelist_plugin_comprehensive_test.rs  program_whitelist_plugin_test.rs  remove_authority_test.rs  remove_plugin_test.rs  role_permission_plugin_test.rs  sol_limit_plugin_test.rs  token_limit_plugin_test.rs  update_authority_test.rs  update_plugin_test.rs
lazorkit-v2/state/: Cargo.toml
lazorkit-v2/state/src/: lib.rs  plugin.rs  plugin_ref.rs  position.rs  transmute.rs  wallet_account.rs  wallet_authority.rs  wallet_state.rs
plugins/all-permission/: Cargo.toml
plugins/all-permission/src/: lib.rs
plugins/sol-limit/: Cargo.toml
plugins/sol-limit/src/: lib.rs
plugins/token-limit/: Cargo.toml
plugins/token-limit/src/: lib.rs
plugins/whitelist/: Cargo.toml
plugins/whitelist/src/: lib.rs
program/: Cargo.toml  build.rs  idl.json  lazor_kit.json  lazorkit_program.json
program/src/: compact.rs  entrypoint.rs  error.rs  idl_facade.rs  instruction.rs  lib.rs  processor.rs  test_borsh.rs  utils.rs
program/src/actions/: add_authority.rs  add_plugin.rs  create_session.rs  create_smart_wallet.rs  create_wallet.rs  deactivate_policy.rs  execute.rs  mod.rs  remove_authority.rs  remove_plugin.rs  sign.rs  transfer_ownership.rs  update_authority.rs  update_plugin.rs
program/src/auth/: ed25519.rs  mod.rs  traits.rs
program/src/processor/: authorize.rs  close_session.rs  close_wallet.rs  create_session.rs  create_wallet.rs  execute.rs  execute_actions.rs  execute_deferred.rs  init_treasury_shard.rs  initialize_config.rs  manage_authority.rs  mod.rs  reclaim_deferred.rs  revoke_session.rs  sweep_treasury.rs  transfer_ownership.rs  update_config.rs
program/src/state/: action.rs  authority.rs  config.rs  deferred.rs  mod.rs  session.rs  wallet.rs
program/src/util/: authenticate.rs  invoke.rs  mod.rs  permission.rs  plugin.rs  snapshot.rs
program/tests/: account_binding_tests.rs  closing_tests.rs  config_tests.rs  cross_wallet_and_fee_attacks.rs  nonce_integration_tests.rs  revoke_session_tests.rs  secp256r1_tests.rs  session_tests.rs  slothashes_oob_test.rs  system_program_check.rs  wallet_lifecycle.rs
program/tests/common/: mod.rs
programs/default_policy/: Cargo.toml
programs/default_policy/src/: error.rs  lib.rs  state.rs
programs/lazorkit/: Cargo.toml  SECURITY.md
programs/lazorkit/src/: constants.rs  error.rs  events.rs  lib.rs  security.rs  utils.rs
sdk/lazorkit-sdk/: Cargo.toml  package.json
sdk/lazorkit-sdk/examples/: README.md  add_authority.rs  create_session.rs  create_wallet.rs  fetch_wallet.rs
sdk/lazorkit-sdk/src/: client.ts  error.rs  lib.rs  types.rs  types.ts  utils.rs
sdk/lazorkit-sdk/tests/: advanced_tests.rs  integration_tests.rs  manual-test.ts  session_tests.rs
sdk/policies/whitelist/: Cargo.toml
state/: Cargo.toml
state/src/: builder.rs  error.rs  lib.rs  plugin.rs  plugin_ref.rs  policy.rs  position.rs  registry.rs  role_permission.rs  transmute.rs  wallet_account.rs
state/src/authority/: ed25519.rs  mod.rs  secp256k1.rs  secp256r1.rs
tests-e2e/: Cargo.toml  TEST_ISSUES.md
tests-e2e/noop-program/: Cargo.toml
tests-e2e/noop-program/src/: lib.rs
tests-e2e/src/: common.rs  main.rs
tests-e2e/src/scenarios/: audit_validations.rs  cross_wallet_attacks.rs  dos_attack.rs  failures.rs  happy_path.rs  mod.rs  secp256r1_auth.rs
tests-integration/: Cargo.toml  check_id.rs
tests-integration/tests/: account_snapshots_tests.rs  add_authority_tests.rs  comprehensive_authority_plugin_tests.rs  create_wallet_tests.rs  edge_cases_tests.rs  error_handling_tests.rs  execute_tests.rs  instruction_tests.rs  multi_authority_plugin_tests.rs  plugin_edge_cases_tests.rs  plugin_management_permission_tests.rs  policy_registry_tests.rs  program_whitelist_negative_tests.rs  real_world_use_cases_test.rs  role_permission_tests.rs  security_hardening_tests.rs
tests-integration/tests/common/: mod.rs
tests-rpc/: Cargo.toml
tests-rpc/src/: main.rs
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
tests/integration/tests/: add_authority_tests.rs  authority_lifecycle_tests.rs  complex_policy_tests.rs  create_wallet_tests.rs  execute_tests.rs  policy_registry_tests.rs  sdk_tests.rs  sdk_usage_tests.rs  secp256k1_session_tests.rs  secp256r1_session_tests.rs  session_tests.rs  transfer_ownership_tests.rs
(+439 files in other folders)
