[workspace]
resolver = "2"
members = ["program", "no-padding", "assertions", "tests-e2e"]

[workspace.dependencies]
pinocchio = { version = "0.9", features = ["std"] }
pinocchio-pubkey = { version = "0.3" }
pinocchio-system = { version = "0.3" }
no-padding = { path = "./no-padding" }
assertions = { path = "./assertions" }

[patch.crates-io]
getrandom = { git = "https://github.com/rust-random/getrandom.git", tag = "v0.2.15" }
