[package]
name = "lazor-assertions"
version.workspace = true
edition = "2021"
description = "Solana program assertion utilities"
license = "AGPL-3.0"
authors.workspace = true


[dependencies]
pinocchio = { version = "0.9" }
pinocchio-system = { version = "0.3" }
pinocchio-pubkey = { version = "0.3" }

[features]
default = []

[lints]
workspace = true
