[package]
name = "lazorkit-program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

# Cluster selection — forwards to the assertions crate where the program ID
# is embedded via declare_id!. Exactly one must be set at build time:
#   cargo build-sbf --features mainnet
#   cargo build-sbf --features devnet
[features]
mainnet = ["assertions/mainnet"]
devnet  = ["assertions/devnet"]

[dependencies]
pinocchio = { workspace = true }
pinocchio-pubkey = { workspace = true }
pinocchio-system = { workspace = true }
no-padding = { workspace = true }
assertions = { workspace = true }
shank = { version = "0.4.2", git = "https://github.com/anagrambuild/shank.git" }
solana-security-txt = "1.1.2"
default-env = "0.1"

[dev-dependencies]
solana-sdk = "4.0"
litesvm = "0.11"
rand = "0.9"
anyhow = "1.0"
p256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.11"
ecdsa = "0.16"
base64ct = "=1.8.3"
blake3 = "=1.8.5"
getrandom = "=0.3.4"

[build-dependencies]
shank_idl = { version = "0.4.2", git = "https://github.com/anagrambuild/shank.git" }
anyhow = "1.0"
