[package]
name = "lazorkit-tests-e2e"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lazorkit-tests-e2e"
path = "src/main.rs"

[dependencies]
litesvm = "0.9.1"
solana-pubkey = { version = "2.1", features = [
    "std",
] } # Assuming 2.1 is compatible or latest
solana-account = "3.4"
solana-hash = "4.1"
solana-keypair = "3.1"
solana-instruction = "3.1"
solana-transaction = "3.0"
solana-message = "3.0"
solana-system-program = "3.1"
solana-clock = "3.0"
solana-signer = "3.0"
solana-address = "2.1" # Check if litesvm uses 2.1 (yes, see output)
solana-program = "2.1" # Contract uses this, keep it for constants?
anyhow = "1.0"
rand = "0.8"
p256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"
pinocchio = { workspace = true }
serde_json = "1.0.149"
