[package]
name = "lazorkit-tests-e2e"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lazorkit-tests-e2e"
path = "src/main.rs"

[dependencies]
litesvm = "0.8"
solana-pubkey = { version = "2.1", features = ["std"] }
solana-account = "3.4"
solana-hash = "4.1"
solana-keypair = "3.1"
solana-instruction = "3.1"
solana-transaction = "3.0"
solana-message = "3.0"
solana-system-program = "3.1"
solana-clock = "3.0"
solana-signer = "3.0"
solana-address = "2.1"
solana-program = "2.1"
solana-sysvar = "3.0"
anyhow = "1.0"
rand = "0.8"
p256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"
pinocchio = { workspace = true }
serde_json = "1.0.149"
base64 = "0.21"
