[package]
name = "tests-integration"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
solana-sdk = "2.2.1"
solana-program = "2.2.1"
solana-client = "2.2.1"
litesvm = "0.6.1"
anyhow = "1.0"
test-log = "0.2.16"
rand = "0.9.0"
borsh = "1.5"
lazorkit-v2-state = { path = "../state" }
lazorkit-v2-assertions = { path = "../assertions" }
pinocchio = { version = "0.9", features = ["std"] }
pinocchio-system = "0.3"
pinocchio-pubkey = "0.3"

[dev-dependencies]
