[package]
name = "tests-integration"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
solana-program = "=2.2.1"
solana-program-test = "=2.2.1"
solana-sdk = "=2.2.1"
pinocchio = { version = "0.9", features = ["std"] }
tokio = { version = "1.14.1", features = ["full"] }
borsh = "1.5"
bincode = "1.3"
litesvm = "0.9.1"
libsecp256k1 = "0.7.0"
p256 = "0.13"
rand = "0.8"
solana-address = "2.0"
solana-hash = "4.0"
solana-transaction = "3.0.2"

lazorkit-program = { path = "../program" }
lazorkit-state = { path = "../state" }
lazorkit-interface = { path = "../interface" }
lazorkit-sol-limit-plugin = { path = "../plugins/sol-limit" }
lazorkit-whitelist-plugin = { path = "../plugins/whitelist" }
