[package]
name = "lazorkit-program"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = { version = "0.9" }
pinocchio-system = { version = "0.3" }
pinocchio-pubkey = { version = "0.3" }
pinocchio-token = { version = "0.1" }
borsh = { version = "1.5", features = ["derive"] }
thiserror = "1.0"
lazor-assertions = { path = "../assertions" }
lazorkit-state = { path = "../state" }
lazorkit-interface = { path = "../interface" }

[lints]
workspace = true
