[package]
name = "lazorkit-state"
version.workspace = true
edition = "2021"
license = "AGPL-3.0"
authors.workspace = true

[features]
client = []

[dependencies]
pinocchio = { version = "0.9", features = ["std"] }
pinocchio-pubkey = { version = "0.3" }
lazor-assertions = { path = "../assertions" }
no-padding = { path = "../no-padding" }
libsecp256k1 = { version = "0.7.2", default-features = false }

[target.'cfg(not(feature = "static_syscalls"))'.dependencies]
murmur3 = "0.5.2"


[dev-dependencies]
rand = "0.9.0"
hex = "0.4.3"
openssl = { version = "0.10.72", features = ["vendored"] }
# agave-precompiles = "2.2.14"
solana-secp256r1-program = "2.2.1"

[lints.clippy]
unexpected_cfgs = "allow"
unused_mut = "allow"
unused_variables = "allow"
