[package]
name = "lazorkit-v2-instructions"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
client = ["solana-program"]

[dependencies]
pinocchio = { version = "0.9", features = ["std"] }
pinocchio-pubkey = { version = "0.3" }
pinocchio-system = { version = "0.3" }
solana-program = { version = "2.0.13", optional = true }