[package]
name = "lazorkit-v2"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Lazorkit V2 smart wallet program"
publish = false
authors.workspace = true

[lints]
workspace = true

[dependencies]
pinocchio-pubkey = { version = "0.3" }
pinocchio = { version = "0.9", features = ["std"] }
pinocchio-system = { version = "0.3" }
pinocchio-token = { version = "0.3" }
shank = { version = "0.4.2", git = "https://github.com/anagrambuild/shank.git" }
lazorkit-v2-state = { path = "../state" }
lazorkit-v2-instructions = { path = "../instructions" }
lazorkit-v2-assertions = { path = "../assertions" }
num_enum = "0.7.3"
bytemuck = { version = "1.13.1", features = ["derive"] }
no-padding = { path = "../no-padding" }
solana-security-txt = "=1.1.1"
default-env = "=0.1.1"
solana-program = "=2.2.1"

[features]
test-bpf = []
no-entrypoint = []

[lib]
crate-type = ["cdylib", "lib"]

[build-dependencies]
shank_idl = { version = "0.4.2", git = "https://github.com/anagrambuild/shank.git" }
anyhow = "1.0"

[dev-dependencies]
test-log = { version = "0.2", default-features = false }
litesvm = "0.6.1"
solana-sdk = "2"
rand = "0.8"
anyhow = "1.0"
