[package]
name = "lazorkit-all-permission-plugin"
version = "0.1.0"
description = "All Permission Plugin for Lazorkit V2 (allows everything)"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib", "lib"]
name = "lazorkit_all_permission_plugin"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
pinocchio = { version = "0.9", features = ["std"] }
pinocchio-system = { version = "0.9", features = ["std"] }
lazorkit-v2-interface = { path = "../../lazorkit-v2/interface" }
lazorkit-v2-state = { path = "../../lazorkit-v2/state" }
lazorkit-v2-assertions = { path = "../../lazorkit-v2/assertions" }

[dev-dependencies]
solana-program-test = "~2.0"
solana-sdk = "~2.0"
test-log = { version = "0.2", default-features = false }
