[package]
name = "lazorkit-token-limit-plugin"
version = "0.1.0"
description = "Token Limit Plugin for Lazorkit V2"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib", "lib"]
name = "lazorkit_token_limit_plugin"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
pinocchio = { version = "0.9", features = ["std"] }
pinocchio-system = { version = "0.3" }
pinocchio-token = { version = "0.3" }
lazorkit-v2-interface = { path = "../../lazorkit-v2/interface" }
lazorkit-v2-state = { path = "../../lazorkit-v2/state" }
lazorkit-v2-assertions = { path = "../../lazorkit-v2/assertions" }

[dev-dependencies]
test-log = { version = "0.2", default-features = false }
