[package]
name = "lazorkit-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
lazorkit-program = { path = "../../contracts/program" }
lazorkit-state = { path = "../../contracts/state" }
solana-sdk = "2.2.1"
solana-client = "2.2.1"
borsh = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

[dependencies.lazorkit-policy-sol-limit]
path = "../policies/sol-limit"
optional = true

[dependencies.lazorkit-policy-whitelist]
path = "../policies/whitelist"
optional = true

[features]
default = []
sol-limit = ["dep:lazorkit-policy-sol-limit"]
whitelist = ["dep:lazorkit-policy-whitelist"]
all-policies = ["sol-limit", "whitelist"]
