[package]
name = "lazorkit-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
lazorkit-program = { path = "../../contracts/program" }
lazorkit-state = { path = "../../contracts/state" }
solana-sdk = "2.2.1"
solana-client = "2.2.1"
borsh = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
solana-program-test = "2.2.1"
tokio = { version = "1.0", features = ["full", "test-util"] }
anyhow = "1.0"
rand = "0.8"
hex = "0.4"
