[package]
name = "tests-integration"
version = "0.1.0"
edition = "2021"

[dependencies]
pinocchio = { version = "0.9", features = ["std"] }
litesvm = "0.9.1"
solana-hash = "4.0.1"
solana-transaction = "3.0.2"
bincode = "1.3.3"
lazorkit-program = { path = "../../contracts/program" }
lazorkit-state = { path = "../../contracts/state" }
lazorkit-interface = { path = "../../contracts/interface" }
lazorkit-sol-limit-plugin = { path = "../../contracts/policies/sol-limit" }
lazorkit-whitelist-plugin = { path = "../../contracts/policies/whitelist" }
lazorkit-sdk = { path = "../../sdk/lazorkit-sdk" }
lazorkit-policy-sol-limit = { path = "../../sdk/policies/sol-limit" }
lazorkit-policy-whitelist = { path = "../../sdk/policies/whitelist" }
solana-program-test = "2.2.1"
solana-sdk = "2.2.1"
tokio = { version = "1.0", features = ["macros"] }
borsh = "1.0"
assert_matches = "1.5.0"
libsecp256k1 = "0.7.1"
sha3 = "0.10.8"
async-trait = "0.1.89"
futures = "0.3"
solana-address = "2.0.0"
