[package]
name = "lazorkit-whitelist-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
lazorkit-state = { path = "../../state" }
lazorkit-interface = { path = "../../interface" }
no-padding = { path = "../../no-padding" }
pinocchio = "0.9"

[dev-dependencies]
solana-program-test = "2.2.1"
solana-sdk = "2.2.1"

[features]
no-entrypoint = []
